--- a/Lab1/hello.html
+++ b/Lab1/hello.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>header 1</h2>
-    <p>hello world!</p>
+    <img src="logo_UCSD.png" alt="">
+    <a href="#s1">section 1</a>
+    <a href="#s2">section 2</a>
+    <h3>section 1</h3>
+    <img id="s1" src="ucsd-athletics-logo.svg" alt="">
+    <h3>section 2</h3>
+    <img id="s2" src="logos-college-logos-07-23.svg" alt="">
 </body>
 </html>
