--- a/Lab1/hello.html
+++ b/Lab1/hello.html
@@ -4,15 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>UCSD Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="logo_UCSD.png" alt="">
-    <a href="#s1">section 1</a>
-    <a href="#s2">section 2</a>
-    <h3>section 1</h3>
-    <img id="s1" src="ucsd-athletics-logo.svg" alt="">
-    <h3>section 2</h3>
-    <img id="s2" src="logos-college-logos-07-23.svg" alt="">
+    <img id="navlogo" src="logo_UCSD.png" alt="">
+
+    <menu id = "navbar">
+        <li><a href="#s1">Section 1</a></li>
+        <li><a href="#s2">Section 2</a></li>
+        <li><a href="#s3">Section 3</a></li>
+    </menu>
+
+    <div id="s1">
+        <h2>Section 1</h3>
+        <img src="ucsd-athletics-logo.svg" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut pellentesque nunc, eu venenatis sapien. Suspendisse vitae mollis justo. Praesent et sem id arcu elementum vehicula. Nam bibendum eget nulla id viverra. Fusce quis eros feugiat, hendrerit nisl sit amet, laoreet nisl. Etiam semper justo non sapien maximus tristique. In congue varius turpis quis laoreet. Donec neque mi, viverra quis auctor vel, facilisis at est. Mauris aliquet varius metus quis faucibus. </p>
+    </div>
+    
+    <div id="s2">
+        <h2>Section 2</h3>
+        <img src="logos-college-logos-07-23.svg" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut pellentesque nunc, eu venenatis sapien. Suspendisse vitae mollis justo. Praesent et sem id arcu elementum vehicula. Nam bibendum eget nulla id viverra. Fusce quis eros feugiat, hendrerit nisl sit amet, laoreet nisl. Etiam semper justo non sapien maximus tristique. In congue varius turpis quis laoreet. Donec neque mi, viverra quis auctor vel, facilisis at est. Mauris aliquet varius metus quis faucibus. </p>
+    </div>
+
+    <div id="s3">
+        <h2>Section 3</h3>
+        <div class = "grid">
+            <p class="column">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed id augue risus. Curabitur elit magna, accumsan in eleifend ut, venenatis a sem. Nullam sed rutrum nibh, in aliquet dui. Curabitur ut velit felis. Mauris fermentum ultrices vehicula. Aenean facilisis velit id libero pulvinar cursus. Proin tincidunt lacus in massa facilisis consequat. Curabitur ut nisl et leo consequat fringilla. Etiam pellentesque condimentum arcu, interdum dignissim sem luctus ornare. Fusce tincidunt interdum turpis, ut scelerisque urna egestas sed. Quisque ut luctus justo. Nunc consectetur eros eu consequat placerat. Aliquam faucibus libero eu semper consectetur. Praesent nulla libero, maximus eu lacus sed, lacinia rhoncus orci. Integer euismod id eros eget blandit.
+
+                Vestibulum at tincidunt orci. Nulla rutrum augue ac molestie consequat. Mauris velit tortor, condimentum nec nisi aliquet, sollicitudin varius lectus. Aliquam ullamcorper enim nec lorem vestibulum, nec pellentesque velit vestibulum. Aenean sit amet est nisi. Integer tincidunt, arcu ut congue auctor, nibh urna gravida magna, non tempor nulla mi eu libero. Ut ullamcorper erat non lectus fringilla tincidunt sit amet nec libero. Vivamus ultricies neque sapien, ornare porta velit fermentum eu. Etiam non luctus nulla. Integer vitae lacus risus. Morbi vitae ex vitae dolor faucibus aliquet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur egestas urna nunc, vitae viverra nibh posuere vitae.</p>
+            <p class="column">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed id augue risus. Curabitur elit magna, accumsan in eleifend ut, venenatis a sem. Nullam sed rutrum nibh, in aliquet dui. Curabitur ut velit felis. Mauris fermentum ultrices vehicula. Aenean facilisis velit id libero pulvinar cursus. Proin tincidunt lacus in massa facilisis consequat. Curabitur ut nisl et leo consequat fringilla. Etiam pellentesque condimentum arcu, interdum dignissim sem luctus ornare. Fusce tincidunt interdum turpis, ut scelerisque urna egestas sed. Quisque ut luctus justo. Nunc consectetur eros eu consequat placerat. Aliquam faucibus libero eu semper consectetur. Praesent nulla libero, maximus eu lacus sed, lacinia rhoncus orci. Integer euismod id eros eget blandit.
+
+                Vestibulum at tincidunt orci. Nulla rutrum augue ac molestie consequat. Mauris velit tortor, condimentum nec nisi aliquet, sollicitudin varius lectus. Aliquam ullamcorper enim nec lorem vestibulum, nec pellentesque velit vestibulum. Aenean sit amet est nisi. Integer tincidunt, arcu ut congue auctor, nibh urna gravida magna, non tempor nulla mi eu libero. Ut ullamcorper erat non lectus fringilla tincidunt sit amet nec libero. Vivamus ultricies neque sapien, ornare porta velit fermentum eu. Etiam non luctus nulla. Integer vitae lacus risus. Morbi vitae ex vitae dolor faucibus aliquet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur egestas urna nunc, vitae viverra nibh posuere vitae.</p>
+            <p class="column">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed id augue risus. Curabitur elit magna, accumsan in eleifend ut, venenatis a sem. Nullam sed rutrum nibh, in aliquet dui. Curabitur ut velit felis. Mauris fermentum ultrices vehicula. Aenean facilisis velit id libero pulvinar cursus. Proin tincidunt lacus in massa facilisis consequat. Curabitur ut nisl et leo consequat fringilla. Etiam pellentesque condimentum arcu, interdum dignissim sem luctus ornare. Fusce tincidunt interdum turpis, ut scelerisque urna egestas sed. Quisque ut luctus justo. Nunc consectetur eros eu consequat placerat. Aliquam faucibus libero eu semper consectetur. Praesent nulla libero, maximus eu lacus sed, lacinia rhoncus orci. Integer euismod id eros eget blandit.
+
+                Vestibulum at tincidunt orci. Nulla rutrum augue ac molestie consequat. Mauris velit tortor, condimentum nec nisi aliquet, sollicitudin varius lectus. Aliquam ullamcorper enim nec lorem vestibulum, nec pellentesque velit vestibulum. Aenean sit amet est nisi. Integer tincidunt, arcu ut congue auctor, nibh urna gravida magna, non tempor nulla mi eu libero. Ut ullamcorper erat non lectus fringilla tincidunt sit amet nec libero. Vivamus ultricies neque sapien, ornare porta velit fermentum eu. Etiam non luctus nulla. Integer vitae lacus risus. Morbi vitae ex vitae dolor faucibus aliquet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur egestas urna nunc, vitae viverra nibh posuere vitae.</p>
+            <p class="column">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed id augue risus. Curabitur elit magna, accumsan in eleifend ut, venenatis a sem. Nullam sed rutrum nibh, in aliquet dui. Curabitur ut velit felis. Mauris fermentum ultrices vehicula. Aenean facilisis velit id libero pulvinar cursus. Proin tincidunt lacus in massa facilisis consequat. Curabitur ut nisl et leo consequat fringilla. Etiam pellentesque condimentum arcu, interdum dignissim sem luctus ornare. Fusce tincidunt interdum turpis, ut scelerisque urna egestas sed. Quisque ut luctus justo. Nunc consectetur eros eu consequat placerat. Aliquam faucibus libero eu semper consectetur. Praesent nulla libero, maximus eu lacus sed, lacinia rhoncus orci. Integer euismod id eros eget blandit.
+
+                Vestibulum at tincidunt orci. Nulla rutrum augue ac molestie consequat. Mauris velit tortor, condimentum nec nisi aliquet, sollicitudin varius lectus. Aliquam ullamcorper enim nec lorem vestibulum, nec pellentesque velit vestibulum. Aenean sit amet est nisi. Integer tincidunt, arcu ut congue auctor, nibh urna gravida magna, non tempor nulla mi eu libero. Ut ullamcorper erat non lectus fringilla tincidunt sit amet nec libero. Vivamus ultricies neque sapien, ornare porta velit fermentum eu. Etiam non luctus nulla. Integer vitae lacus risus. Morbi vitae ex vitae dolor faucibus aliquet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur egestas urna nunc, vitae viverra nibh posuere vitae.</p>
+        </div>
+</div>
+
 </body>
 </html>
