--- a/Lab1/hello.html
+++ b/Lab1/hello.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UCSD Homepage</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
 <body>
     <img id="navlogo" src="logo_UCSD.png" alt="">
@@ -18,13 +19,13 @@
 
     <div id="s1">
         <h2>Section 1</h3>
-        <img src="ucsd-athletics-logo.svg" alt="">
+        <img src="ucsd-athletics-logo.svg" alt="" style="max-width: 100%">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut pellentesque nunc, eu venenatis sapien. Suspendisse vitae mollis justo. Praesent et sem id arcu elementum vehicula. Nam bibendum eget nulla id viverra. Fusce quis eros feugiat, hendrerit nisl sit amet, laoreet nisl. Etiam semper justo non sapien maximus tristique. In congue varius turpis quis laoreet. Donec neque mi, viverra quis auctor vel, facilisis at est. Mauris aliquet varius metus quis faucibus. </p>
     </div>
     
     <div id="s2">
         <h2>Section 2</h3>
-        <img src="logos-college-logos-07-23.svg" alt="">
+        <img src="logos-college-logos-07-23.svg" alt="" style="max-width: 100%">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut pellentesque nunc, eu venenatis sapien. Suspendisse vitae mollis justo. Praesent et sem id arcu elementum vehicula. Nam bibendum eget nulla id viverra. Fusce quis eros feugiat, hendrerit nisl sit amet, laoreet nisl. Etiam semper justo non sapien maximus tristique. In congue varius turpis quis laoreet. Donec neque mi, viverra quis auctor vel, facilisis at est. Mauris aliquet varius metus quis faucibus. </p>
     </div>
 
