--- a/Lab1/hello.html
+++ b/Lab1/hello.html
@@ -15,6 +15,7 @@
         <li><a href="#s1">Section 1</a></li>
         <li><a href="#s2">Section 2</a></li>
         <li><a href="#s3">Section 3</a></li>
+        <li><a href="#subscribe">Subscribe</a></li>
     </menu>
 
     <div id="s1">
@@ -45,7 +46,16 @@
 
                 Vestibulum at tincidunt orci. Nulla rutrum augue ac molestie consequat. Mauris velit tortor, condimentum nec nisi aliquet, sollicitudin varius lectus. Aliquam ullamcorper enim nec lorem vestibulum, nec pellentesque velit vestibulum. Aenean sit amet est nisi. Integer tincidunt, arcu ut congue auctor, nibh urna gravida magna, non tempor nulla mi eu libero. Ut ullamcorper erat non lectus fringilla tincidunt sit amet nec libero. Vivamus ultricies neque sapien, ornare porta velit fermentum eu. Etiam non luctus nulla. Integer vitae lacus risus. Morbi vitae ex vitae dolor faucibus aliquet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur egestas urna nunc, vitae viverra nibh posuere vitae.</p>
         </div>
-</div>
+    </div>
+
+    <div id="subscribe">
+        <h2>Subscribe to our Newsletter</h2>
+        <form action="https://www.w3schools.com/action_page.php" method="GET">
+            <label for="email">Enter your email: </label>
+            <input name="email" type="text">
+            <input type="submit" value="Submit">
+        </form>
+    </div>
 
 </body>
 </html>
