--- a/Lab1/hello.html
+++ b/Lab1/hello.html
@@ -7,6 +7,7 @@
     <title>UCSD Homepage</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script src="javascript.js"></script>
 </head>
 <body>
     <img id="navlogo" src="logo_UCSD.png" alt="">
@@ -50,7 +51,7 @@
 
     <div id="subscribe">
         <h2>Subscribe to our Newsletter</h2>
-        <form action="https://www.w3schools.com/action_page.php" method="GET">
+        <form id="subscribe-form">
             <label for="email">Enter your email: </label>
             <input name="email" type="text">
             <input type="submit" value="Submit">
